Tue May 16 12:36:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Asynch_Queued_Message.cpp:
        * tao/Synch_Queued_Message.cpp:
        * tao/GIOP_Message_Generator_Parser_10.cpp:
        * tao/Object.cpp:
        * tao/Profile.cpp:
        * tao/IIOP_Profile.cpp:
        * tao/Strategies/DIOP_Acceptor.cpp:
        * tao/Strategies/DIOP_Endpoint.cpp:
          Const improvements

        * tao/GIOP_Message_State.cpp:
          Improved error message when the GIOP header can't be parsed

        * tao/ORB.cpp:
          Initialise pointer with 0.

        * tao/PortableServer/PolicyS_T.h:
          Use true instead of 1

Tue May 16 05:22:15 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/IIOP_Connector.cpp:

          This is a potential fix for the Bug 2417 flaw. The problem is
          that when using nonblocking connects, in conjunction with asynch
          invocations, it is possible for a transport to be returned by
          the connector even though the network connection has not
          completed. For asynchronous invocations using the SYNCH_NONE
          policy, this is appropriate, as request messages may be queued
          for delivery if/when the connection completes.

          Bug 2417 describes a scenario where such a nonblocking
          connection attempt fails, but the actual failure happens after
          the transport has already been returned to the caller. This
          causes a problem because the underlying ACE connector framework
          relies on "borrowing" the reference to the connection handler
          during the time it is waiting for connections to complete or
          fail. For blocked connects this is fine because either the
          transport will be returned to the caller associated with a
          completely established connection, or a failure will occur.

          The issue for nonblocking connects is that when a transport is